tests/ui/storage_derive/fail/not-public-struct.stderr
error: non `pub` ink! storage structs are not supported
 --> tests/ui/storage_derive/fail/not-public-struct.rs:5:5
  |
5 | /     #[derive(Storage)]
6 | |     #[ink(storage)]
7 | |     struct PSP22Struct {
8 | |         pub value: bool,
9 | |     }
  | |_____^
